--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.1.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1",
     "xlsx": "^0.17.4"
