--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
   "dependencies": {
     "@knovator/api": "^0.0.3",
     "axios": "^0.24.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "react-hot-toast": "^2.1.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.0",
     "xlsx": "^0.17.4"
   },
   "scripts": {
-    "build": "npx babel src --out-dir dist"
+    "build": "npx babel src --out-dir dist",
+    "style": "npx tailwindcss -i ./index.css -o ./output.css --minify"
   },
   "eslintConfig": {
     "extends": [
@@ -37,8 +36,14 @@
     "@babel/core": "^7.16.5",
     "@babel/preset-env": "^7.16.5",
     "@babel/preset-react": "^7.16.5",
-    "autoprefixer": "^9.8.8",
-    "postcss": "^7.0.39",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.2",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
+  },
+  "peerDependencies": {
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
   }
 }
