--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "main": "./dist/app.js",
+  "author": "VimLeSai <desai.vimal250@gmail.com> (https://knovator.com/)",
   "dependencies": {
     "@knovator/api": "^0.0.4",
     "react-scripts": "^4.0.0",
@@ -44,5 +45,6 @@
   "peerDependencies": {
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
-  }
+  },
+  "license": "MIT"
 }
